[package]
name = "resolution_rust_week1_olio"
version = "0.1.0"
edition = "2024"
description = "A basic github cli made for hackclub. Not worth using"
license = "MIT"

[dependencies]
clap = {version= "4.5.61", features= ["derive"]}
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
